Add repo for maven shade plugin v3.3.0-SNAPSHOT